# NEXUS-OS

./: .gitignore  01_PROJECT_STATE.md  AGENTS.md  NEXUS_OS_V4_MASTER_PLAN.md  README.md  SECURITY.md  knowledge.md  pyproject.toml  worklog.md
nexus_os/: __init__.py  exceptions.py
nexus_os/bridge/: __init__.py  server.py
nexus_os/cron/: __init__.py
nexus_os/db/: __init__.py  manager.py
nexus_os/engine/: __init__.py  executor.py  hermes.py
nexus_os/gmr/: __init__.py
nexus_os/governor/: __init__.py  base.py  trust_engine.py
nexus_os/monitoring/: __init__.py  token_guard.py
nexus_os/observability/: __init__.py  squeez.py  tracing.py
nexus_os/relay/: __init__.py  model_relay.py
nexus_os/security/: __init__.py  sanitizer.py
nexus_os/stresslab/: __init__.py  isc_runner.py
nexus_os/swarm/: __init__.py  worker.py
nexus_os/team/: __init__.py
nexus_os/twave/: __init__.py  chimera_router.py  prompt_analyzer.py  tracker.py
nexus_os/vault/: __init__.py  manager.py
tests/: test_error_handling.py
tests/db/: test_manager.py
tests/observability/: test_squeez.py  test_tracing.py
tests/relay/: test_model_relay.py
tests/stresslab/: test_isc_runner.py
tests/twave/: test_chimera_router.py  test_prompt_analyzer.py  test_tracker.py
